# django-api-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
docker_compose/: app.yaml
src/api/: filters.py  schemas.py  urls.py
src/api/v1/: urls.py
src/api/v1/gear/: filters.py  handlers.py  schemas.py
src/api/v1/item_quality/: schemas.py
src/apps/common/: filters.py  models.py
src/apps/gear/: admin.py  apps.py
src/apps/gear/entities/: gear.py  item_quality.py
src/apps/gear/filters/: gear.py
src/apps/gear/migrations/: 0001_initial.py
src/apps/gear/models/: __init__.py  gear.py  item_quality.py
src/apps/gear/services/: gear.py
src/project/: asgi.py  urls.py  wsgi.py
src/project/settings/: main.py
